# autolabeler-gs

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements-real.txt  requirements.txt
autolabeler/: __init__.py  cli.py  config.py  datatypes.py  pipeline.py  postprocess.py  quality.py  utils.py  visualize.py
autolabeler/exporters/: __init__.py  archive.py  coco.py  yolo.py
autolabeler/models/: __init__.py  grounding_dino.py  sam2_segmenter.py
sample_images/: README.md
scripts/: copy_demo_previews.py  final_check.py  make_demo_assets.py  real_model_test.py  smoke_test.py
tests/: conftest.py  test_archive.py  test_box_utils.py  test_coco_export.py  test_mask_to_polygon.py  test_model_adapter_helpers.py  test_prompt_parser.py  test_quality_report.py  test_yolo_export.py
